--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <head>
 <title></title>
-<link href="css/maincss.css" rel="stylesheet">
+<link href="maincss.css" rel="stylesheet">
 
 <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
 </head>
